# data_science_4_transport

./: .gitingore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
0-WorkshopDescription/course_description/: index.html
0-WorkshopDescription/python_overview/: index.html
0-WorkshopDescription/sql_spark_sql/: index.html
1-Lakehouse/1_0_medallion_architecture/: index.html
1-Lakehouse/1_1_lakehouse/: index.html
1-Lakehouse/1_2_delta_lake/: index.html
1-Lakehouse/1_3_spark/: index.html
1-Lakehouse/1_4_project/: index.html
1-PrzykladoweWarsztaty/1_1_CreatingClusters/: index.html
1-PrzykladoweWarsztaty/1_1_processing_files/: index.html
1-PrzykladoweWarsztaty/example_workshops/: index.html
1-PrzykladoweWarsztaty/spark_example/: index.html
1-Przyklady/1_1_CreatingClusters/: 1_1_CreatingClusters.ipynb  index.html
1-Przyklady/1_1_analiza_danych/: 1_1_analiza_danych.ipynb  index.html
1-Przyklady/1_1_databricks/: index.html
1-Przyklady/1_1_lakehouse/: index.html
1-Przyklady/assets/: realtime_use_case.drawio
2-Databricks/db_platform_architecture/: index.html
2-Databricks/python_data_types1/: index.html  python_data_types1.ipynb
3-DeltaLake/1_0_delta_lake_introduction/: index.html
3-DeltaLake/1_1_processing_files/: index.html
3-DeltaLake/1_2_incremental_loading/: index.html
diagrams/: batch_architecture.py  stream_architecture.py  test.py
docs/: index.md
empty/: index.html
pkits/: links
search/: search_index.json
site/: 404.html  index.html
source_files/: probka.csv
stylesheets/: extra.css
(+61 files in other folders)
