[project]
name = "data-science-4-transport"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "mkdocs>=1.6.1",
  "mkdocs-macros-plugin>=1.3.7",
  "mkdocs-material>=9.6.7",
  "pymdown-extensions>=10.14.3",
  "pandas>=2.2.3",
  "pandas[excel, xml]>=2.2.3",
  "notebook>=7.3.3",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-encryptcontent-plugin>=3.0.4",
]
